fix map height jump

--- a/client/styles/partials/_search-page.scss
+++ b/client/styles/partials/_search-page.scss
@@ -56,6 +56,7 @@
       @include display(flex);
 
       @include respond-to(handhelds) {
+        height: 30%;
         @include flex(1);
       }
 
